[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/projectiles/bullet.png" type="Texture" id=1]
[ext_resource path="res://objects/projectiles/bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 1.5 )

[node name="bullet" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 0, -1 )
scale = Vector2( 1, 0.5 )
z_index = -1
texture = ExtResource( 1 )

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 0, -2.5 )

[node name="HitShape" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 1 )

[node name="Col2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )
disabled = true

[connection signal="area_entered" from="HitArea" to="." method="_on_Area2D_area_entered"]
